styles.css
/* CSS Reset: https://www.joshwcomeau.com/css/custom-css-reset/ */

/* 1. Use a more-intuitive box-sizing model */
*, *::before, *::after {
  box-sizing: border-box;
}

/* 2. Remove default margin */
* {
  margin: 0;
}

/* 3. Enable keyword animations */
@media (prefers-reduced-motion: no-preference) {
  html {
    interpolate-size: allow-keywords;
  }
}

body {
  /* 4. Add accessible line-height */
  line-height: 1.5;
  /* 5. Improve text rendering */
  -webkit-font-smoothing: antialiased;
}

/* 6. Improve media defaults */
img, picture, video, canvas, svg {
  display: block;
  max-width: 100%;
}

/* 7. Inherit fonts for form controls */
input, button, textarea, select {
  font: inherit;
}

/* 8. Avoid text overflows */
p, h1, h2, h3, h4, h5, h6 {
  overflow-wrap: break-word;
}

/* 9. Improve line wrapping */
p {
  text-wrap: pretty;
}
h1, h2, h3, h4, h5, h6 {
  text-wrap: balance;
}

/*
  10. Create a root stacking context
*/
#root, #__next {
  isolation: isolate;
}

/* Containers */

#layout-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    min-height: 100vh;
}

#header-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: min(5vh, 50px);
    margin: min(7vh, 70px) 0;
}

#main-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: min(5vh, 50px);
}

/* Header */

#title-text {
    font-size: 4rem;
    font-weight: bold;
}

#player-form {
    display: flex;
    gap: 20px;
    font-size: 1.5rem;
}

.player-form-item-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 5px;
}

.player-form-item-container > input {
    font-size: 1.2rem;
    width: 15ch;
    background-color: #e9e9ed;
    border: 1px solid black;
    border-radius: 5px;
}

#player-vs-container {
    display: flex;
    align-items: center;
    gap: 3vw;
    font-size: 2.8rem;
}

#vs-text {
    font-size: 4rem;
}

.header-button {
    font-size: 2rem;
    border: outset;
    border-radius: 5px;
}

/* Main */

#turn-indicator-text {
    font-size: 2rem;
}

#board-container {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(3, 1fr);
    height: fit-content;
    width: fit-content;
    background-color: black;
    gap: 5px;
    padding: 5px;
    border-radius: 5px;
}

.board-button {
    display: flex;
    justify-content: center;
    width: 150px;
    height: 150px;
    border: none;
}

/* Other */

.hidden {
    display: none;
}

.x-marker, .o-marker {
    min-width: 50px;
    width: 50px;
}

